@@ -9,6 +9,8 @@ Zope 2.8 edition
 - Made sure logging is configured. Read $INSTANCE_HOME/log.ini if it exists.
 - Made base.TestCase a new-style class.
 - Added placeless.py for Z3-style setup. Thanks to Whit Morriss.
+- Fixed functional.http to only pass the request body (no headers) to
+  publish_module. Thanks to Andreas Zeidler.
 
 0.9.8 (Zope 2.8 edition)
 - Renamed 'doctest' package to 'zopedoctest' because of name-shadowing
